<resources>
    <string name="app_name">Foodistan</string>
    <string name="foodistan">Foodistan</string>
    <string name="mobile_number">Mobile Number (10 digits)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="register_txt"><u>Don\'t have an account?Sign up now</u></string>
    <string name="enter_name">Enter Name (Min. 3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="enter_details_message">Enter your registered mobile number and email address below:</string>
    <string name="next">Next</string>
    <string name="preference_file_name">Foodistan Shared Prference</string>
    <string name="home_page">Home Page</string>
    <string name="favourites">Favourites</string>
    <string name="profile">My Profile</string>
    <string name="faqs">FAQs</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="logout">Logout</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="enter_otp">Enter OTP(4 characters)</string>
    <string name="new_password">New Password(Min. 4 characters)</string>
    <string name="submit">Submit</string>
    <string name="order_history">Order History</string>
    <string name="choose_from_menu_list_below">Choose from menu list below:</string>
    <string name="proceed_to_cart">Proceed To Cart</string>
    <string name="add">Add</string>
    <string name="ordering_from">Ordering From:</string>
    <string name="item_name">Item Name</string>
    <string name="place_order">Place Order</string>
    <string name="order_success">Your Order has been successfully placed!!</string>
    <string name="ok">Ok</string>
    <string name="name">Name</string>
    <string name="cost_low_to_high">Cost(Low To High)</string>
    <string name="cost_high_to_low">Cost(High To Low)</string>
    <string name="rating">Rating</string>
    <string name="sort_by">Sort By?</string>
    <string name="you_haven_t_placed_any_order_yet">You Haven\'t Placed Any Order Yet</string>
</resources>