<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".activity.RegisterActivity">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawableTint="@color/white"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etName"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawableTint="@color/white"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etMobileNumberRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_smartphone_24"
        android:drawableTint="@color/white"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLines="1"
        android:maxLength="10"
        android:padding="6dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNumberRegister"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_add_location_24"
        android:drawableTint="@color/white"
        android:hint="@string/delivery_address"
        android:inputType="text"
        android:maxLines="3"
        android:padding="6dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAddress"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableTint="@color/white"
        android:hint="Password (Min. 4 characters)"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasswordRegister"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableTint="@color/white"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btnRegister"
        android:backgroundTint="@color/primaryColorDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_below="@+id/etConfirmPassword"
        android:text="@string/register"
        android:layout_height="wrap_content"/>

</RelativeLayout>