<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Cart">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/llRestaurantDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtOrderFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="6dp"
            android:text="@string/ordering_from"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtRestaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="6dp"
            android:text="@string/restaurant_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/llRestaurantDetails"
        android:background="@color/primaryColor" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnPlaceOrder"
        android:layout_below="@+id/llRestaurantDetails"
        android:layout_margin="10dp"
        android:padding="6dp" />

    <Button
        android:id="@+id/btnPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:padding="6dp"
        android:text="@string/place_order"
        android:textAllCaps="false"
        android:textSize="18sp" />

</RelativeLayout>